# swift-iosmake

./: CMakeLists.txt  generate-project.sh
source/: AppDelegate.swift  ViewController.swift
